# torii-core

./: .claude-modified-files  .env.example  .gitignore  .rustfmt.toml  AGENTS.md  ARCHITECTURE_CHANGES.md  BENCHMARKING.md  CLAUDE.md  Cargo.toml  HANDOFF.md  PLAN.md  README.md  build.rs  compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.toml  report.md  sqlite-data.db-journal  todo.md
bins/dojo-fetcher/: Cargo.toml
bins/dojo-fetcher/src/: fetch_events.rs
bins/simple-app/: Cargo.toml
bins/simple-app/src/: main.rs
bins/torii-arcade/: Cargo.toml  README.md
bins/torii-arcade/src/: config.rs  main.rs
bins/torii-erc20/: Cargo.toml  PROFILING.md  README.md
bins/torii-erc20-synth/: Cargo.toml  README.md
bins/torii-erc20-synth/src/: main.rs
bins/torii-erc20/proto/: erc20.proto
bins/torii-erc20/src/: config.rs  decoder.rs  grpc_service.rs  main.rs  sink.rs  storage.rs
bins/torii-introspect-bin/: Cargo.toml  README.md
bins/torii-introspect-bin/src/: config.rs  main.rs
bins/torii-introspect-synth/: Cargo.toml  README.md
bins/torii-introspect-synth/src/: main.rs
bins/torii-tokens/: Cargo.toml  README.md
bins/torii-tokens/client/: .gitignore  README.md  package.json
bins/torii-tokens/client/apps/react/: index.html  package.json
bins/torii-tokens/client/apps/svelte/: index.html  package.json  (+1 more)
bins/torii-tokens/client/shared/: package.json
bins/torii-tokens/src/: backfill.rs  config.rs  main.rs
crates/dojo/: Cargo.toml  README.md
crates/dojo/migrations/: 001_dojo_store.sql
crates/dojo/migrations/sqlite/: 001_dojo_store.sql
crates/dojo/src/: decoder.rs  dojo_postgres.sql  error.rs  event.rs  external_contract.rs  introspect.rs  lib.rs  manager.rs  table.rs
crates/dojo/src/store/: json.rs  mod.rs  postgres.rs  sql.rs  sqlite.rs
crates/introspect/: Cargo.toml  README.md
crates/introspect-json-sink/: Cargo.toml
crates/introspect-postgres-sink/: Cargo.toml
crates/introspect-postgres-sink/migrations/: 001_domains.sql  002_schema_state.sql  003_schema_state.sql  003_store.sql  004_hex2int_function.sql
crates/introspect-postgres-sink/src/: backend.rs  create.rs  error.rs  handler.rs  insert.rs  json copy.rs  json.rs  lib.rs  manager.rs  processor.rs  query.rs  sink.rs  sql.rs  sqlite.rs  table.rs  table_updates.rs  tables.rs  types.rs  upgrade.rs  utils.rs  value.rs
crates/introspect-postgres-sink/tests/: hex2int.rs
crates/introspect-sql-sink/: Cargo.toml  README.md
crates/introspect-sql-sink/migrations/sqlite/: 002_schema_state.sql
crates/introspect-sql-sink/src/: backend.rs  error.rs  lib.rs  namespace.rs  processor.rs  runtime.rs  schema.rs  sink.rs  table.rs  tables.rs
crates/introspect-sql-sink/src/postgres/: backend.rs  create.rs  handler.rs  insert.rs  mod.rs  query.rs  types.rs  upgrade.rs
crates/introspect-sql-sink/src/sqlite/: backend.rs  json.rs  mod.rs  processor.rs  query.rs  record.rs  sink.rs  table.rs  types.rs
crates/introspect-sqlite-sink/: Cargo.toml
crates/introspect-sqlite-sink/migrations/: 002_schema_state.sql
crates/introspect-sqlite-sink/src/: backend.rs  json.rs  lib.rs  processor.rs  sink.rs  table.rs
crates/introspect/migrations/: 001_introspect_store.sql
crates/introspect/src/: events.rs  lib.rs  manager.rs  schema.rs  sink.rs  store.rs  tables.rs
crates/introspect/src/postgres/: global.rs  mod.rs  owned.rs  types.rs
crates/pathfinder/: Cargo.toml  README.md
crates/pathfinder/src/: decoding.rs  error.rs  extractor.rs  fetcher.rs  lib.rs  sqlite.rs  test.rs  utils.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: db.rs  lib.rs  metadata.rs  migration.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  provider.rs
crates/provider/src/jsonrpc/: mod.rs
crates/provider/src/types/: serde_impls.rs
crates/provider/tests/: jsonrpc.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: db.rs  lib.rs  migration.rs  udf.rs
crates/starknet/: Cargo.toml
crates/starknet/src/: felt.rs  lib.rs  serde.rs  starknet.rs
crates/torii-common/: Cargo.toml  README.md
crates/torii-common/src/: backfill.rs  json.rs  lib.rs  metadata.rs  sql.rs  token_uri.rs  utils.rs
crates/torii-controllers-sink/: Cargo.toml  README.md
crates/torii-controllers-sink/src/: lib.rs
crates/torii-ecs-sink/: Cargo.toml  README.md  build.rs  ecs-grpc.http
crates/torii-ecs-sink/proto/: schema.proto  types.proto  world.proto
crates/torii-ecs-sink/src/: grpc_service.rs  lib.rs  sink.rs
crates/torii-ecs-sink/tests/: sqlite_prepared_statements.rs
crates/torii-entities-historical-sink/: Cargo.toml
crates/torii-entities-historical-sink/src/: lib.rs
crates/torii-erc721/: Cargo.toml  README.md  build.rs
crates/torii-erc721/proto/: erc721.proto
crates/torii-erc721/src/: decoder.rs  grpc_service.rs  handlers.rs  identification.rs  lib.rs  sink.rs  storage.rs  synthetic.rs
crates/torii-governance/: Cargo.toml  build.rs
crates/torii-governance/proto/: governance.proto
crates/torii-governance/src/: decoder.rs  discovery.rs  grpc_service.rs  identification.rs  lib.rs  sink.rs  storage.rs
crates/torii-log-sink/: Cargo.toml  README.md  build.rs
crates/torii-log-sink/proto/: log.proto
crates/torii-log-sink/src/: api.rs  decoder.rs  grpc_service.rs  lib.rs
crates/torii-sql-sink/: Cargo.toml  README.md  build.rs
crates/torii-sql-sink/proto/: sql.proto
crates/torii-sql-sink/src/: api.rs  decoder.rs  grpc_service.rs  lib.rs  samples.rs
crates/utils/: Cargo.toml
crates/utils/src/: json.rs  lib.rs
tests/dojo_fixtures/: .gitignore  .tool-versions  Cargo.toml  README.md  build.rs  dojo_fixtures_events.json
tests/dojo_fixtures/cairo/baseline/: README.md  Scarb.toml  dojo_dev.toml  manifest_dev.json
tests/dojo_fixtures/cairo/upgrade/: README.md  Scarb.toml  dojo_dev.toml  manifest_dev.json  torii_dev.toml
tests/dojo_fixtures/dojo_introspect_cairo/: torii_dev.toml
tests/dojo_fixtures/src/: abigen.rs  constants.rs  deployment.rs  events.rs  main.rs  sozo.rs  types.rs
tests/dojo_fixtures/src/transactions/: baseline.rs  mod.rs  upgrade.rs
(+315 files in other folders)
