[workspace]
members = [
    ".",
    "crates/torii-common",
    "crates/torii-sql-sink",
    "crates/torii-log-sink",
    "crates/torii-erc20",
    "crates/torii-erc721",
    "crates/torii-erc1155",
    "bins/torii-erc20",
    "bins/torii-tokens",
]
default-members = [
    "bins/torii-erc20",
    "bins/torii-tokens",
]
resolver = "2"

[package]
name = "torii"
version = "0.1.0"
edition = "2021"

[lib]
name = "torii"
path = "src/lib.rs"

[[example]]
name = "simple_sql_sink"
path = "examples/simple_sql_sink/main.rs"

[[example]]
name = "multi_sink_example"
path = "examples/multi_sink_example/main.rs"

[[example]]
name = "eventbus_only_sink"
path = "examples/eventbus_only_sink/main.rs"

[[example]]
name = "http_only_sink"
path = "examples/http_only_sink/main.rs"

[[example]]
name = "test_block_extractor"
path = "examples/test_block_extractor/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC and protobuf
# Keep older version for now due to some compatibility issues with newer axum: https://github.com/hyperium/tonic/issues/1964.
tonic = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP server and routing
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# ETL Pipeline dependencies
starknet = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"
anyhow = "1.0"
chrono = "0.4"
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
hex = "0.4"
bitflags = "2.6"
tokio-util = "0.7"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
# Example dependencies
torii-sql-sink = { path = "crates/torii-sql-sink" }
torii-log-sink = { path = "crates/torii-log-sink" }
