[workspace]
members = [
    ".",
    "crates/torii-common",
    "crates/torii-sql-sink",
    "crates/torii-log-sink",
    "crates/torii-erc20",
    "crates/torii-erc721",
    "crates/torii-erc1155",
    "crates/introspect",
    "crates/dojo",
    "bins/torii-erc20",
    "bins/torii-tokens",
]
default-members = ["bins/torii-erc20", "bins/torii-tokens"]
resolver = "2"


[package]
name = "torii"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC and protobuf
# Keep older version for now due to some compatibility issues with newer axum: https://github.com/hyperium/tonic/issues/1964.
tonic = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP server and routing
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Starknet
starknet = "0.17"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# ETL Pipeline dependencies
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
bitflags = "2.6"
tokio-util = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Types
hex = "0.4"
primitive-types = { version = "0.14.0", features = ["serde"] }
starknet-types-core = "0.2.0"

# Build
tonic-build = "0.12"

# Torii core
torii.path = "."
torii-common = { path = "crates/torii-common" }


[lib]
name = "torii"
path = "src/lib.rs"

[[example]]
name = "simple_sql_sink"
path = "examples/simple_sql_sink/main.rs"

[[example]]
name = "multi_sink_example"
path = "examples/multi_sink_example/main.rs"

[[example]]
name = "eventbus_only_sink"
path = "examples/eventbus_only_sink/main.rs"

[[example]]
name = "http_only_sink"
path = "examples/http_only_sink/main.rs"

[[example]]
name = "test_block_extractor"
path = "examples/test_block_extractor/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
prost-types.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
starknet.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tonic-reflection.workspace = true
tonic-web.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tempfile = "3.13"
tracing-subscriber.workspace = true
tower.workspace = true

# Example dependencies
torii-sql-sink = { path = "crates/torii-sql-sink" }
torii-log-sink = { path = "crates/torii-log-sink" }
torii-common = { path = "crates/torii-common" }
torii-erc20 = { path = "crates/torii-erc20" }
torii-erc721 = { path = "crates/torii-erc721" }
torii-erc1155 = { path = "crates/torii-erc1155" }

[[bench]]
name = "perf_harness"
harness = false

[workspace.lints.rust]
# Deny unsafe code unless explicitly allowed
unsafe_code = "warn"
# Require documentation for public items (disabled for now - enable gradually)
# missing_docs = "warn"

[workspace.lints.clippy]
# Clippy lint groups (set lower priority so individual lints can override)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific denies (serious issues) - disabled for now, enable gradually
# unwrap_used = "warn"
# expect_used = "warn"
# panic = "warn"
todo = "warn"
unimplemented = "warn"

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

# Documentation lints - allow for now (enable gradually)
doc_markdown = "allow"
missing_docs_in_private_items = "allow"

# Cast lints - common in blockchain code dealing with u64/i64
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"

# Other noisy lints
similar_names = "allow"
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
cognitive_complexity = "allow"
too_many_arguments = "allow"
struct_field_names = "allow"
redundant_pub_crate = "allow"
return_self_not_must_use = "allow"
iter_without_into_iter = "allow"
option_if_let_else = "allow"
use_self = "allow"

# Generated code lints (protobuf)
default_constructed_unit_structs = "allow"

# Allow for now - these need gradual fixing
unused_async = "allow"
future_not_send = "allow"
result_large_err = "allow"
type_complexity = "allow"
needless_pass_by_value = "allow"

# Code style lints - allow for now
derive_partial_eq_without_eq = "allow"
or_fun_call = "allow"
format_push_string = "allow"
format_in_format_args = "allow"
unreadable_literal = "allow"
needless_continue = "allow"
manual_let_else = "allow"
default_trait_access = "allow"
items_after_statements = "allow"
unnecessary_wraps = "allow"
missing_fields_in_debug = "allow"
unused_self = "allow"
doc_lazy_continuation = "allow"

[lints]
workspace = true
