[package]
name = "simple-app"
version = "0.1.0"
edition = "2021"
description = "Example runner wiring log and sqlite sinks from config"
authors = ["Torii Runtime <dev@torii.rs>"]
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
starknet.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Local crates
bytes.workspace = true
torii-core = { path = "../../crates/core/torii-core" }
torii-registry = { path = "../../crates/core/torii-registry" }
