[package]
name = "torii-erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
torii = { path = "../../" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Starknet
starknet = "0.17"
url = "2.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP
axum = "0.7"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"

# gRPC/Protobuf
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tonic-reflection = "0.12"
chrono = "0.4"

# Streaming
async-stream = "0.3"
futures = "0.3"

# Profiling (optional, enable with --features profiling)
[dependencies.pprof]
version = "0.13"
features = ["flamegraph", "prost-codec"]
optional = true

[build-dependencies]
tonic-build = "0.12"

[features]
profiling = ["pprof"]
