[package]
name = "torii-introspect-bin"
version = "0.1.0"
edition = "2021"
description = "Dojo introspect indexer for PostgreSQL or SQLite"

[[bin]]
name = "torii-introspect-bin"
path = "src/main.rs"

[dependencies]
torii = { path = "../../" }
torii-config-common.workspace = true
torii-dojo = { path = "../../crates/dojo" }
torii-ecs-sink = { path = "../../crates/torii-ecs-sink" }
torii-introspect-postgres-sink = { path = "../../crates/introspect-postgres-sink" }
torii-introspect-sqlite-sink = { path = "../../crates/introspect-sqlite-sink" }
torii-sqlite = { path = "../../crates/sqlite" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
starknet = "0.17"
url = "2.5"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio-rustls", "any"] }
tonic.workspace = true
tonic-reflection.workspace = true
tonic-web.workspace = true

[lints]
workspace = true
