[package]
name = "torii-introspect-synth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "torii-introspect-synth"
path = "src/main.rs"

[dependencies]
torii = { path = "../../" }
torii-runtime-common.workspace = true
torii-dojo = { path = "../../crates/dojo" }
torii-introspect-postgres-sink = { path = "../../crates/introspect-postgres-sink" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
starknet = "0.17"
starknet-types-core.workspace = true
dojo-introspect.workspace = true
introspect-types.workspace = true

[lints]
workspace = true
