[package]
name = "torii-dojo"
version = "0.1.0"
edition = "2021"
description = "ERC20 token indexer library for Torii"

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true
tokio.workspace = true
torii-common.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true

dojo-introspect-types.path = "../../../dojo-introspect/"
introspect-types.path = "../../../introspect/crates/types"
torii-introspect.path = "../introspect"

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
