[package]
name = "torii-dojo"
version = "0.1.0"
edition = "2021"
description = "ERC20 token indexer library for Torii"

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true
tokio.workspace = true
torii-common.workspace = true
torii.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
itertools.workspace = true

dojo-introspect.workspace = true
introspect-types.workspace = true
torii-introspect.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
] }

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
