[package]
name = "torii-introspect-json-sink"
version = "0.1.0"
edition = "2021"
description = "Introspect indexer library for Torii"

[dependencies]
introspect-types = { path = "../../../introspect/crates/types" }
serde.workspace = true
starknet-types-core.workspace = true
torii.workspace = true

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
