[package]
name = "torii-introspect-sqlite-sink"
version = "0.1.0"
edition = "2021"
description = "SQLite sink implementation for Torii runtime"
authors = ["Torii Runtime <dev@torii.rs>"]
license = "Apache-2.0"

[dependencies]
sqlx = { workspace = true, features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
anyhow.workspace = true
async-trait.workspace = true
metrics.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
tokio.workspace = true
torii.workspace = true
tracing.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
introspect-types.workspace = true
itertools.workspace = true

torii-introspect.workspace = true
torii-sql = { workspace = true, features = ["sqlite"] }

[lints]
workspace = true
