[package]
name = "torii-pathfinder"
version = "0.1.0"
edition = "2021"
description = "Pathfinding utilities for Torii"

[dependencies]
starknet.workspace = true
rusqlite = { version = "0.32.1", features = ["bundled"] }
zstd = { version = "0.13.2", features = ["experimental"] }
serde.workspace = true
bincode = { workspace = true, features = ["serde"] }
thiserror.workspace = true
rand = "0.8.5"
torii-starknet.workspace = true

# Etl dependencies
torii = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = ["etl"]
etl = ["torii", "async-trait", "anyhow", "torii-starknet/starknet"]
