[package]
name = "torii-postgres"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL utils for Torii runtime"
authors = ["Torii Runtime <dev@torii.rs>"]
license = "Apache-2.0"

[dependencies]
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
] }
anyhow.workspace = true
async-trait.workspace = true
xxhash-rust.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
torii.workspace = true
tracing.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
futures.workspace = true
crc.workspace = true


torii-common.workspace = true
