[package]
name = "torii-postgres"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL utils for Torii runtime"
authors = ["Torii Runtime <dev@torii.rs>"]
license = "Apache-2.0"

[dependencies]
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
] }
futures.workspace = true
torii-sql.workspace = true
