[package]
name = "torii-sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite connection helpers for Torii storage crates"

[dependencies]
async-trait.workspace = true
futures.workspace = true
sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio-rustls",
    "migrate",
] }

torii-sql.workspace = true

[lints]
workspace = true
