[package]
name = "torii-starknet"
version = "0.1.0"
edition = "2021"
description = "StarkNet utilities for Torii"

[dependencies]
starknet = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
assert_matches = "1.5.0"
serde_json.workspace = true
bincode = { workspace = true, features = ["serde"] }

[features]
default = ["serde"]
starknet = ["dep:starknet"]
serde = ["dep:serde"]

[lints]
workspace = true
