[package]
name = "torii-common"
version = "0.1.0"
edition = "2021"
description = "Common utilities for Torii token indexers"

[dependencies]
starknet = "0.17"
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
async-trait = "0.1"
serde_json = "1.0"

[lints]
workspace = true
