[package]
name = "torii-ecs-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
torii = { path = "../.." }
torii-dojo = { path = "../dojo" }
torii-introspect = { path = "../introspect" }
dojo-introspect.workspace = true
introspect-types.workspace = true

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
futures-util.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "postgres", "any"] }
starknet.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
metrics.workspace = true
hex.workspace = true
num-bigint = "0.4"

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
