[package]
name = "torii-entities-historical-sink"
version = "0.1.0"
edition = "2021"
description = "Append-only historical entity sink for Torii introspect models"
authors = ["Torii Runtime <dev@torii.rs>"]
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["any", "postgres", "sqlite", "runtime-tokio-rustls"] }
starknet.workspace = true
tokio.workspace = true
torii.workspace = true
tracing.workspace = true
thiserror.workspace = true
introspect-types.workspace = true

torii-introspect.workspace = true

[lints]
workspace = true
