[package]
name = "torii-log-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
torii = { path = "../../" }
starknet = "0.17"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"

# gRPC and protobuf
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP (use torii's re-exported axum)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Utils
anyhow = "1"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
