[package]
name = "torii-utils"
version = "0.1.0"
edition = "2021"
description = "Event type manager for Torii"
authors = ["Torii Runtime <dev@torii.rs>"]
license = "Apache-2.0"

[dependencies]
serde.workspace = true
starknet-types-core.workspace = true
dojo-introspect-utils.workspace = true
introspect-types.workspace = true
introspect-events.workspace = true
serde_json.workspace = true
starknet.workspace = true
anyhow.workspace = true
thiserror.workspace = true
